fix: support minSdk 26 in BLE device flow